variables.Variables.scala.error
Compilation error:
Variables:2: error: not found: value OverBaggle
while (!OverBaggle) {forward(); x=x+1}
        ^Variables:3: error: not found: value PickUpBaggle
PickUpBaggle
^