variables.Variables.scala.code
var x:Int=0
while (!OverBaggle) {forward(); x=x+1}
PickUpBaggle
while (x!=0) {backward()}
